--- a/xuxinwei.html
+++ b/xuxinwei.html
@@ -94,7 +94,7 @@
                     <div class="table-container">
                         <div class="cell-container">
                             <div id="navigation" class="navbar-collapse collapse">
-                                 <ul  class="navigation-list pull-left"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2412"><a target="_blank" href="index.html">首页</a></li>
+                                 <ul  class="navigation-list pull-left"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2412"><a target="_self"  href="index.html">首页</a></li>
                                     <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-257"><a target="_blank" href="introduction.html">九拍简介</a></li>
                                     <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-251"><a target="_blank" href="jiaoxuetixi.html">教学体系</a></li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3077"><a target="_blank" href="tesekecheng.html">特色课程</a></li>
