--- a/webnine-dev_wcg/index.html
+++ b/webnine-dev_wcg/index.html
@@ -1498,7 +1498,7 @@ function _getwebteacher() {
         for (var i = 0; i < data.length; i++) {
             rowdata = data[i];
             if(rowdata.type==1) {
-                $('#ISL_Cont').append('<div class="pic"><a title="" href="zhaozi.html"><img width="180" height="180" src="' + rowdata.icon + '"></a><div><p style="text-align: center;color:#c20000;font-family:微软雅黑;">' + rowdata.name + '</p><p style="text-align: center;font-family:微软雅黑;color:#777;">' + rowdata.course + '</p><p style="text-align: left;font-family:微软雅黑;">' + rowdata.summary + '</p></div></div>')
+                $('#ISL_Cont').append('<div class="pic"><a title="" href="javascript:toteacher('+rowdata.id+')"><img width="180" height="180" src="' + rowdata.icon + '"></a><div><p style="text-align: center;color:#c20000;font-family:微软雅黑;">' + rowdata.name + '</p><p style="text-align: center;font-family:微软雅黑;color:#777;">' + rowdata.course + '</p><p style="text-align: left;font-family:微软雅黑;">' + rowdata.summary + '</p></div></div>')
             }
         }
     }, function (error) {
@@ -1901,11 +1901,11 @@ function _getscrollvideo() {
     function tesecourselist() {
         _get("http://101.201.140.178:8080/api/tesecourse/tesecoursebytag?tag=6-18岁", "", function (data) {
             $('#tesecourselist').empty();
-            // console.log("newsdata", data);
             for (var i = 0; i < data.length; i++) {
                 rowdata = data[i];
-                /*$('#tesecourselist ul').append('<div><a class="riqi" style="font-family: 微软雅黑; color: #333;" href="./muban.html?newsid=' + rowdata.id + '">' + rowdata.title + '</a></div><div style="width: 500px;height: 1px;background: -webkit-gradient(linear, 0% 60%, 80% 100%, from(#e3e3e3), to(#F7F7F7));"></div>')*/
-                $('#tesecourselist').append('<a style="display: inline-block;margin-right: 30px" href="./tesekecheng.html?id='+rowdata.id+'"><img src="'+rowdata.icon+'" alt=""><li><span style="display: block;text-align: center">'+rowdata.name+'</span></li></a>');
+                if(rowdata.type==1) {
+                    $('#tesecourselist').append('<a style="display: inline-block;margin-right: 30px" href="./tesekecheng.html?id=' + rowdata.id + '"><img src="' + rowdata.icon + '" alt=""><li><span style="display: block;text-align: center">' + rowdata.name + '</span></li></a>');
+                }
             }
         })
     }
@@ -1917,6 +1917,10 @@ function _getscrollvideo() {
         $(".messages").append("<div class='send'>  " + msg + "</div><br />");
         $('#msg').val("");
     };
+    toteacher=function (id) {
+        localStorage.setItem("teacherid",id);
+        location.href="./zhaozi.html";
+    }
     /**
      * Created by clock on 16-11-25.
      */
