--- a/webnine-dev_wcg/index.html
+++ b/webnine-dev_wcg/index.html
@@ -1883,7 +1883,7 @@ function _getscrollvideo() {
         tesecourselist();
         _getwebshcoollist();
         _getwebteacher();
-//        _getindexvideo();
+        _getindexvideo();
         _getscrollvideo();
     })
 </script>
