--- a/webnine-dev_wcg/index.html
+++ b/webnine-dev_wcg/index.html
@@ -649,37 +649,37 @@
                                 <div class="wpb_raw_code wpb_content_element wpb_raw_html ">
                                     <div class="wpb_wrapper" id="schoollist">
                                         <div style=""><strong>·</strong>&nbsp;&nbsp;&nbsp;<a
-                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu.html">九拍南开南翠屏校区<span
+                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu1.html">九拍南开南翠屏校区<span
                                                 style="padding-left: 40px;">&gt;</span></a>
                                             <div class="b3"></div>
                                         </div>
                                         <div style=""><strong>·</strong>&nbsp;&nbsp;&nbsp;<a
-                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu.html">九拍河东嘉里汇校区<span
+                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu1.html">九拍河东嘉里汇校区<span
                                                 style=" padding-left: 40px;">&gt;</span></a>
                                             <div class="b3"></div>
                                         </div>
                                         <div style=""><strong>·</strong>&nbsp;&nbsp;&nbsp;<a
-                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu.html">九拍河东中山门校区<span
+                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu1.html">九拍河东中山门校区<span
                                                 style=" padding-left: 40px;">&gt;</span></a>
                                             <div class="b3"></div>
                                         </div>
                                         <div style=""><strong>·</strong>&nbsp;&nbsp;&nbsp;<a
-                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu.html">九拍河西梅江校区<span
+                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu1.html">九拍河西梅江校区<span
                                                 style="padding-left: 56px;">&gt;</span></a>
                                             <div class="b3"></div>
                                         </div>
                                         <div style=""><strong>·</strong>&nbsp;&nbsp;&nbsp;<a
-                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu.html">九拍河西华夏校区<span
+                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu1.html">九拍河西华夏校区<span
                                                 style="padding-left: 56px;">&gt;</span></a>
                                             <div class="b3"></div>
                                         </div>
                                         <div style=""><strong>·</strong>&nbsp;&nbsp;&nbsp;<a
-                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu.html">九拍中北镇永旺校区<span
+                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu1.html">九拍中北镇永旺校区<span
                                                 style="padding-left:40px;">&gt;</span></a>
                                             <div class="b3"></div>
                                         </div>
                                         <div style=""><strong>·</strong>&nbsp;&nbsp;&nbsp;<a
-                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu.html">九拍开发区泰达校区<span
+                                                style="font-family: 微软雅黑; color: #333;" href="fenxiaoqu1.html">九拍开发区泰达校区<span
                                                 style="padding-left: 40px;">&gt;</span></a>
                                             <div class="b3"></div>
                                         </div>
@@ -1503,7 +1503,9 @@ tohref=function (schoolid) {
                 $('#indexvideo').empty();
                 for (var i = 0; i < data.length; i++) {
                     rowdata = data[i];
-                    $('#indexvideo').append('<video id="mvideo" height="400px"width="100%"src="'+rowdata.url+'"controls="controls"></video>')
+                    $('#indexvideo').append('<video id="mvideo" height="400px"width="100%"src="'+rowdata.url+'"controls="controls"></video> <p style="text-align: right;"><a class="konw-more"  style="font-family: 微软雅黑; color: #777;" href="#">了解更多优秀学员 &gt;&nbsp;</a></p>')
+
+
                 }
             }, function (error) {
 
