--- a/webnine-dev_wcg/introduction.html
+++ b/webnine-dev_wcg/introduction.html
@@ -662,10 +662,10 @@
     $("#x-click").click(function () {
         $(".chatbox").hide();
     });
-    mysend = function () {
+     mysend = function () {
         var msg = $('#msg').val();
         sendPrivateText(msg, "user1490088656193");
-        $(".messages").append("<div class='send'>  " + msg + "</div><br />");
+        $(".messages").append("我：<div class='send' style='display: inline;'> "+msg + "</div><br />");
         $('#msg').val("");
     };
 </script>
