--- a/webnine-dev_wcg/login.html
+++ b/webnine-dev_wcg/login.html
@@ -641,7 +641,7 @@
     mysend = function () {
         var msg = $('#msg').val();
         sendPrivateText(msg, "user1490088656193");
-        $(".messages").append("<div class='send'>" + msg + "</div><br />");
+        $(".messages").append("我：<div class='send' style='display: inline;'> "+msg + "</div><br />");
         $('#msg').val("");
     };
 </script>
