--- a/webnine-dev_wcg/webnine-dev_wcg/xuxinwei.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/xuxinwei.html
@@ -186,7 +186,7 @@
                                     <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-521"><a target="_blank" href="pinpaihuodong.html">品牌活动</a></li>
                                     <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3074"><a target="_blank" href="jiaoxuechengguo.html">教学成果</a></li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-552"><a target="_blank" href="APP.html">APP下载</a></li>
-                                </ul>                                               <a href="login.html" id="login-ok" class="pull-right btn-alt btn-sm buy-btn">登录</a>
+                                </ul>                                              <!-- <a href="login.html" id="login-ok" class="pull-right btn-alt btn-sm buy-btn">登录</a>-->
                             </div>
 
                         </div>
