--- a/webnine-dev_wcg/webnine-dev_wcg/tesekecheng.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/tesekecheng.html
@@ -141,7 +141,7 @@
                                     <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-521"><a target="_blank" href="pinpaihuodong.html">品牌活动</a></li>
                                     <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3074"><a target="_blank" href="jiaoxuechengguo.html">教学成果</a></li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-552"><a target="_blank" href="APP.html">APP下载</a></li>
-                                </ul>                                               <a href="login.html" id="login-ok" class="pull-right btn-alt btn-sm buy-btn">登录</a>
+                                </ul>                                          <!--     <a href="login.html" id="login-ok" class="pull-right btn-alt btn-sm buy-btn">登录</a>-->
                             </div>
 
                         </div>
@@ -193,7 +193,7 @@
                                             <ul class="vc_tta-tabs-list">
                                                 <li class="vc_tta-tab" data-vc-tab="">
                                                     <!--<a href="#1488357399823-43c7b909-eadd" data-vc-tabs="" data-vc-container=".vc_tta" onclick="shaixuan1()"><span class="vc_tta-title-text">4-6岁</span></a></li>-->
-                                                    <a href="javascript:void(0);" data-vc-tabs="" data-vc-container=".vc_tta" onclick="shaixuan1()"><span class="vc_tta-title-text four-six">4-6岁</span></a></li>
+                                                    <a href="javascript:void(0);" data-vc-tabs="" data-vc-container=".vc_tta" onclick="shaixuan1()"><span class="vc_tta-title-text four-six ">4-6岁</span></a></li>
                                                 <li class="vc_tta-tab  " data-vc-tab=""><a href="javascript:void(0);" onclick="shaixuan2()" data-vc-tabs="" data-vc-container=".vc_tta"><span class="vc_tta-title-text six-eighteen">6-18岁</span></a></li>
                                                 <li class="vc_tta-tab" data-vc-tab=""><a href="javascript:void(0);" onclick="shaixuan3()" data-vc-tabs="" data-vc-container=".vc_tta"><span class="vc_tta-title-text 18+">18岁以上</span></a></li>
                                             </ul>
