--- a/webnine-dev_wcg/webnine-dev_wcg/map.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/map.html
@@ -17,6 +17,7 @@
     <!--<script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=KXQEcPBg2mIm3dNaTYwdpYxL&s=1"></script>-->
 
     <style>
+        body,form,div,ul,ol,li,h1,h2,h3,h4,h5,h6,table,tr,th,td,p,input,dl,dt,dd,ul,ol,li,input,textarea { font-family:"微软雅黑"!important;}
      .chatbox {
             width: 500px;
             height: 500px;
@@ -836,7 +837,7 @@
                     latitude: data[i].latitude,
                     star: 4,
                     address: data[i].address,
-                    tel: data[i].tel
+                    tel: data[i].phone
                 };
                 list[i]=school;
 //                rowdata = data[i];
