--- a/webnine-dev_wcg/webnine-dev_wcg/jiaoxuechengguo.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/jiaoxuechengguo.html
@@ -14,6 +14,7 @@
     <script src="js/respond.min.js"></script>
     <![endif]-->
     <style>
+        body,form,div,ul,ol,li,h1,h2,h3,h4,h5,h6,table,tr,th,td,p,input,dl,dt,dd,ul,ol,li,input,textarea { font-family:"微软雅黑"!important;}
     .chatbox {
             width: 500px;
             height: 500px;
