--- a/webnine-dev_wcg/webnine-dev_wcg/jiaoxuetixi.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/jiaoxuetixi.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/index.css">
 
     <style type="text/css">
+        body,form,div,ul,ol,li,h1,h2,h3,h4,h5,h6,table,tr,th,td,p,input,dl,dt,dd,ul,ol,li,input,textarea { font-family:"微软雅黑"!important;}
     .chatbox {
             width: 500px;
             height: 500px;
