--- a/webnine-dev_wcg/webnine-dev_wcg/pinpaihuodong.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/pinpaihuodong.html
@@ -8,6 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/css.css" rel="stylesheet">
     <style type="text/css">
+        body,form,div,ul,ol,li,h1,h2,h3,h4,h5,h6,table,tr,th,td,p,input,dl,dt,dd,ul,ol,li,input,textarea { font-family:"微软雅黑"!important;}
      .chatbox {
             width: 500px;
             height: 500px;
