--- a/webnine-dev_wcg/webnine-dev_wcg/ninenews.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/ninenews.html
@@ -166,7 +166,7 @@
 </div> -->
 
 <!-- 头部区域 -->
-<header class="header header-black">
+<header class="header header-black fixed">
         <div class="header-wrapper">
             <div class="container">
                 <div class="col-sm-2 col-xs-12 navigation-header">
