--- a/webnine-dev_wcg/webnine-dev_wcg/yangbo.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/yangbo.html
@@ -160,8 +160,8 @@
     <div class="preloader"></div>
 </div> -->
 <!-- 头部区域 -->
- <header class="header header-black" id="go-top">
-        <div class="header-wrapper">
+ <header class="header header-black fixed" id="go-top">
+        <div class="header-wrapper ">
             <div class="container">
                 <div class="col-sm-2 col-xs-12 navigation-header">
                     <div class="table-container">
