--- a/webnine-dev_wcg/webnine-dev_wcg/map.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/map.html
@@ -111,7 +111,7 @@
     <div class="preloader"></div>
 </div>
 <div class="main-container" id="go-top">
-    <header class="header header-black">
+    <header class="header header-black fixed">
         <div class="header-wrapper">
             <div class="container">
                 <div class="col-sm-2 col-xs-12 navigation-header">
