--- a/webnine-dev_wcg/webnine-dev_wcg/tesekecheng.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/tesekecheng.html
@@ -114,7 +114,7 @@
     <div class="preloader"></div>
 </div> -->
 <div class="main-container">
-    <header class="header header-black">
+    <header class="header header-black fixed">
         <div class="header-wrapper">
             <div class="container">
                 <div class="col-sm-2 col-xs-12 navigation-header">
@@ -1932,6 +1932,7 @@ $(function () {
      * Created by clock on 16-11-30.
      */
     window.onload = function () {
+        findall();
 //            document.getElementById('register').onclick = register;
 //            document.getElementById('privateText').onclick = sendPrivateText;
 //            document.getElementById('privateCmd').onclick = sendPrivateCmd;
@@ -2002,14 +2003,14 @@ $(function () {
         }
     });
 
-    /*function findall() {
+    function findall() {
         _get("http://101.201.140.178:8080/api/tesecourse/tesecoursebytag?tag=6-18岁", "", function (data) {
             console.log("tesecourse",data);
             $('#content').empty();
             for (var i = 0; i < data.length; i++) {
                 rowdata = data[i];
                 if(rowdata.type==1) {
-                    $('#content').append('<a style="display: inline-block;margin-right: 30px" href="./tesekecheng.html?id=' + rowdata.id + '"><img src="' + rowdata.icon + '" alt=""><li><span style="display: block;text-align: center">' + rowdata.name + '</span></li></a>');
+                    $('#content').append('<a style="display: inline-block;margin-right:0px;text-align:center;" href="./tesekecheng.html?id=' + rowdata.id + '"><img src="' + rowdata.icon + '" alt=""><li><span style="display: block;text-align: center">' + rowdata.name + '</span></li></a>');
                 }
             }
         })
@@ -2027,6 +2028,6 @@ $(function () {
                 failcall(xhr);
             }
         });
-    }*/
+    }
 </script>
 </html>
