--- a/webnine-dev_wcg/webnine-dev_wcg/xitongjiaocheng.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/xitongjiaocheng.html
@@ -165,7 +165,7 @@
     <!-- 头部区域 -->
     
 <!-- 头部区域 -->
- <header class="header header-black">
+ <header class="header header-black fixed">
         <div class="header-wrapper">
             <div class="container">
                 <div class="col-sm-2 col-xs-12 navigation-header">
