--- a/webnine-dev_wcg/webnine-dev_wcg/fenxiaoqu.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/fenxiaoqu.html
@@ -49,7 +49,7 @@
                             <div id="navigation" class="navbar-collapse collapse">
                                 <ul class="navigation-list pull-left">
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2412">
-                                        <a target="_blank" href="index.html">首页</a></li>
+                                        <a target="_blank" href="indexold.html">首页</a></li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-257">
                                         <a target="_blank" href="introduction.html">九拍简介</a></li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-251">
