--- a/webnine-dev_wcg/webnine-dev_wcg/pinpaihuodong.html
+++ b/webnine-dev_wcg/webnine-dev_wcg/pinpaihuodong.html
@@ -155,7 +155,7 @@
                 <div class="col-sm-2 col-xs-12 navigation-header">
                     <div class="table-container">
                         <div class="cell-container">
-                            <a href="index.html" class="logo"><img src="images/logo_02.png" height="78" width="59"></a>
+                            <a href="indexold.html" class="logo"><img src="images/logo_02.png" height="78" width="59"></a>
                             <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation" aria-expanded="false" aria-controls="navigation">
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
@@ -168,7 +168,7 @@
                     <div class="table-container">
                         <div class="cell-container">
                             <div id="navigation" class="navbar-collapse collapse">
-                                <ul  class="navigation-list pull-left"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2412"><a target="_self"  href="index.html">首页</a></li>
+                                <ul  class="navigation-list pull-left"><li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2412"><a target="_self"  href="indexold.html">首页</a></li>
                                     <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-257"><a target="_blank" href="introduction.html">九拍简介</a></li>
                                     <li  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-251"><a target="_blank" href="jiaoxuetixi.html">教学体系</a></li>
                                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3077"><a target="_blank" href="tesekecheng.html">特色课程</a></li>
